# termux-tools

./: Makefile.am  README.md  configure.ac
.github/workflows/: lint-mirror-files.yml  update-mirrors-wiki-page.yml
mirrors/asia/: linux.domainesia.com  mirror.freedif.org  mirror.jeonnam.school  mirror.meowsmp.net  mirror.nag.albony.in  mirror.nevacloud.com  mirror.rinarin.dev  mirror.twds.com.tw  mirrors.cbrx.io  mirrors.krnk.org  mirrors.nguyenhoang.cloud  mirrors.saswata.cc  termux.niranjan.co  tmx.xvx.my.id
mirrors/chinese_mainland/: mirror.iscas.ac.cn  mirror.nyist.edu.cn  mirror.sjtu.edu.cn  mirrors.aliyun.com  mirrors.bfsu.edu.cn  mirrors.cqupt.edu.cn  mirrors.hust.edu.cn  mirrors.nju.edu.cn  mirrors.pku.edu.cn  mirrors.sau.edu.cn  mirrors.sdu.edu.cn  mirrors.tuna.tsinghua.edu.cn  mirrors.ustc.edu.cn  mirrors.zju.edu.cn
mirrors/europe/: ftp.agdsn.de  ftp.fau.de  ftp.icm.edu.pl  grimler.se  is.mirror.flokinet.net  md.mirrors.hacktegic.com  mirror.accum.se  mirror.autkin.net  mirror.bouwhuis.network  mirror.cutie.dating  mirror.leitecastro.com  mirror.sunred.org  mirrors.de.sahilister.net  mirrors.medzik.dev  nl.mirror.flokinet.net  ro.mirror.flokinet.net  termux.3san.dev  termux.cdn.lumito.net  termux.mentality.rip
mirrors/north_america/: gnlug.org  mirror.csclub.uwaterloo.ca  mirror.fcix.net  mirror.mwt.me  mirror.quantum5.ca  mirror.vern.cc  mirrors.utermux.dev  (+2 more)
scripts/: Makefile.am
src/: Makefile.am  arghandling.h  find-undef-syms.cpp  fix-shebang.c
tests/: Makefile.am  find-undef-syms.at  fix-shebang.at  termux-tools.at
wiki/: mirrors_header.md
(+3 files in other folders)
